Fronend tarafında düzenlemeler yapıldı.

--- a/KutuphaneUygulaması/Views/Authors/Create.cshtml
+++ b/KutuphaneUygulaması/Views/Authors/Create.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewData["Title"] = "Yeni Yazar Ekle";
 }
-<h1>@ViewData["Title"]</h1>
+<h1 class="text-success">@ViewData["Title"]</h1>
 
 <form asp-action="Create" method="post">
     @Html.AntiForgeryToken()
