--- a/KutuphaneUygulaması/Views/Authors/Delete.cshtml
+++ b/KutuphaneUygulaması/Views/Authors/Delete.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewData["Title"] = "Yazar Sil";
 }
-<h1>@ViewData["Title"]</h1>
+<h1 class="text-danger">@ViewData["Title"]</h1>
 
 <p>Bu yazarı silmek istediğinize emin misiniz?</p>
 
