--- a/KutuphaneUygulaması/Views/Authors/Details.cshtml
+++ b/KutuphaneUygulaması/Views/Authors/Details.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewData["Title"] = "Yazar Detayları";
 }
-<h1>@ViewData["Title"]</h1>
+<h1 class="text-warning">@ViewData["Title"]</h1>
 
 <dl class="row">
     <dt class="col-sm-2">Ad</dt>
