--- a/KutuphaneUygulaması/Views/Authors/Edit.cshtml
+++ b/KutuphaneUygulaması/Views/Authors/Edit.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewData["Title"] = "Yazar Düzenle";
 }
-<h1>@ViewData["Title"]</h1>
+<h1 class="text-success">@ViewData["Title"]</h1>
 
 <form asp-action="Edit" method="post">
     @Html.AntiForgeryToken()
