--- a/KutuphaneUygulaması/Views/Authors/List.cshtml
+++ b/KutuphaneUygulaması/Views/Authors/List.cshtml
@@ -15,7 +15,7 @@
 </form>
 
 <p>
-    <a asp-action="Create" class="btn btn-success">Yeni Yazar Ekle</a>
+    <a asp-action="Create" class="btn btn-warning">Yeni Yazar Ekle</a>
 </p>
 
 <table class="table table-striped">
