--- a/KutuphaneUygulaması/Views/Books/Delete.cshtml
+++ b/KutuphaneUygulaması/Views/Books/Delete.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewData["Title"] = "Kitap Sil";
 }
-<h1>@ViewData["Title"]</h1>
+<h1 class="text-danger">@ViewData["Title"]</h1>
 
 <p>Bu kitabı silmek istediğinize emin misiniz?</p>
 
