--- a/KutuphaneUygulaması/Views/Books/Create.cshtml
+++ b/KutuphaneUygulaması/Views/Books/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Yeni Kitap Ekle";
 }
 
-<h1>@ViewData["Title"]</h1>
+<h1 class="text-success">@ViewData["Title"]</h1>
 
 <form asp-action="Create" method="post">
     @Html.AntiForgeryToken()
