--- a/KutuphaneUygulaması/Views/Books/Details.cshtml
+++ b/KutuphaneUygulaması/Views/Books/Details.cshtml
@@ -2,7 +2,8 @@
 @{
     ViewData["Title"] = "Kitap Detayları";
 }
-<h1>@ViewData["Title"]</h1>
+<h1 class="text-warning">@ViewData["Title"]</h1>
+
 
 <dl class="row">
     <dt class="col-sm-2">Başlık</dt>
