--- a/KutuphaneUygulaması/Views/Books/List.cshtml
+++ b/KutuphaneUygulaması/Views/Books/List.cshtml
@@ -15,7 +15,7 @@
 </form>
 
 <p>
-    <a asp-action="Create" class="btn btn-success">Yeni Kitap Ekle</a>
+    <a asp-action="Create" class="btn btn-warning">Yeni Kitap Ekle</a>
 </p>
 
 <table class="table table-striped">
